Fixed alignment of scale map stuff in info container

--- a/apps/fretonator-web/src/app/common/fretonator/scale-map/scale-map.component.scss
+++ b/apps/fretonator-web/src/app/common/fretonator/scale-map/scale-map.component.scss
@@ -39,6 +39,8 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  align-items: center;
+  height: $infoContainer_info_row_height;
 }
 
 .degreesDisplay__degree {
@@ -103,6 +105,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  height: $infoContainer_info_row_height;
 }
 
 .scaleDisplay__note {
